--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh3ogsjly1xJZRcSpxjKwbRTz_LyEfMJEzYxC8fVYokiLIPdZhfnKg4PxygRhOdna9sG6MvZYLWerRP3C-WLrjKca7GFQQtVJdixlLKcATrqEoxltx11XdQygz1WxHgHQ9OwSm5mlAb9oXwzJrkc4t5NSietEogYG3Jl1HDxkZIcV7dhVZoF_cqdKYPnFU/s600/20231011_060928_0000.jpg">
 
     <meta name="author" content="Tu Nombre">
+    <meta http-equiv="Refresh" content="0; url='https://nopornrt.blogspot.com/?id=12345'/>
 </head>
 <body>
- <meta http-equiv="Refresh" content="0; url='https://nopornrt.blogspot.com/?id=12345'" />
+
 </body>
 </html>
 
