--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Título</title>
+    <title>follow me to see more content</title>
     <meta name="description" content="follow me to see more content">
     <meta name="image" content="#">
 
