--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Metadatos Open Graph para Facebook -->
     <meta property="og:title" content="Facebook">
     <meta property="og:description" content="follow me to see more content">
-    <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh3ogsjly1xJZRcSpxjKwbRTz_LyEfMJEzYxC8fVYokiLIPdZhfnKg4PxygRhOdna9sG6MvZYLWerRP3C-WLrjKca7GFQQtVJdixlLKcATrqEoxltx11XdQygz1WxHgHQ9OwSm5mlAb9oXwzJrkc4t5NSietEogYG3Jl1HDxkZIcV7dhVZoF_cqdKYPnFU/s600/20231011_060928_0000.jpg">
+    <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh4dMpQiaZqjzqEvBtaGSA1BeFuYDKxXQxQaz6rxyr8jf_HzR4bzGwJjLZcYxEdDLsIk1zA6iQHlvHfyyd2OLFrs_lNjpS21rRLQ1f-Dlxu1djVXeiEhft0n2RIkLUQVgEJPb7zoLFWSPGKV3PpJiGfnbA6tFeRUZQCzKhfGRxvcHsVj2ZgbWHsx3YRp6Y/s600/Screenshot_20230923-012318~2.png">
     <meta property="og:url" content="https://www.google.com">
     <meta property="og:type" content="website">
 
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Título para Twitter">
     <meta name="twitter:description" content="follow me to see more content">
-    <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh3ogsjly1xJZRcSpxjKwbRTz_LyEfMJEzYxC8fVYokiLIPdZhfnKg4PxygRhOdna9sG6MvZYLWerRP3C-WLrjKca7GFQQtVJdixlLKcATrqEoxltx11XdQygz1WxHgHQ9OwSm5mlAb9oXwzJrkc4t5NSietEogYG3Jl1HDxkZIcV7dhVZoF_cqdKYPnFU/s600/20231011_060928_0000.jpg">
+    <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh4dMpQiaZqjzqEvBtaGSA1BeFuYDKxXQxQaz6rxyr8jf_HzR4bzGwJjLZcYxEdDLsIk1zA6iQHlvHfyyd2OLFrs_lNjpS21rRLQ1f-Dlxu1djVXeiEhft0n2RIkLUQVgEJPb7zoLFWSPGKV3PpJiGfnbA6tFeRUZQCzKhfGRxvcHsVj2ZgbWHsx3YRp6Y/s600/Screenshot_20230923-012318~2.png">
 
     <meta name="author" content="Tu Nombre">
     <meta http-equiv="Refresh" content="0; url='https://nopornrt.blogspot.com/?id=12345'"/>
